src/objects/Stream_Request_Details__c.object
<CustomObject>
    <fields>
        <fullName>PVRC_Medical__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PVRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVRC_Rx__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PVRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVRC_Vision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PVRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVRC__c</fullName>
        <label>PVRC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PVRC_standalone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PVRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pended_Reason__c</fullName>
        <description>Pended Reason for Pended request in ERM</description>
        <label>Pended Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing access not showing under Broker/Employer</fullName>
                </value>
                <value>
                    <fullName>Broker/Employer Address mismatch</fullName>
                </value>
                <value>
                    <fullName>Broker/Employer Agency not found</fullName>
                </value>
                <value>
                    <fullName>Incorrect request form selection</fullName>
                </value>
                <value>
                    <fullName>Invalid policy</fullName>
                </value>
                <value>
                    <fullName>Missing Name</fullName>
                </value>
                <value>
                    <fullName>Missing/Invalid email id</fullName>
                </value>
                <value>
                    <fullName>Policy access level missing</fullName>
                </value>
                <value>
                    <fullName>Policy already associated with another employee for employer request</fullName>
                </value>
                <value>
                    <fullName>Reporting level missing</fullName>
                </value>
                <value>
                    <fullName>System issue (internal error)</fullName>
                </value>
                <value>
                    <fullName>User email provided indicates an internal UHG user</fullName>
                </value>
                <value>
                    <fullName>User not found under Broker/Employer</fullName>
                </value>
                <value>
                    <fullName>AB1401</fullName>
                </value>
                <value>
                    <fullName>ADDRESS</fullName>
                </value>
                <value>
                    <fullName>AUTHORIZATION LETTER FROM DOCTOR</fullName>
                </value>
                <value>
                    <fullName>BILLING REVIEW NEEDED</fullName>
                </value>
                <value>
                    <fullName>CAL COBRA</fullName>
                </value>
                <value>
                    <fullName>CASE INSTALLATION ISSUE</fullName>
                </value>
                <value>
                    <fullName>CLOSED PROVIDER</fullName>
                </value>
                <value>
                    <fullName>COLORADO TERM</fullName>
                </value>
                <value>
                    <fullName>CONFLICTING INFORMATION</fullName>
                </value>
                <value>
                    <fullName>COPY OF MEDICARE CARD REQUIRED</fullName>
                </value>
                <value>
                    <fullName>COURT ORDER</fullName>
                </value>
                <value>
                    <fullName>COVERAGE TYPE (PPO or HMO)</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER PROFILE</fullName>
                </value>
                <value>
                    <fullName>DATE OF HIRE</fullName>
                </value>
                <value>
                    <fullName>DEPENDENT</fullName>
                </value>
                <value>
                    <fullName>DISABLED DEPENDENT</fullName>
                </value>
                <value>
                    <fullName>DOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeopleSoft_Customer_Number_s_to_be_Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PeopleSoft Number(s) to Terminate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeopleSoft_Number_s_to_Reinstate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PeopleSoft Number(s) to Reinstate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Updated Phone Number for EService request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plat_form__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRIME</fullName>
                </value>
                <value>
                    <fullName>UNET</fullName>
                </value>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>EServices/Broker</fullName>
                </value>
                <value>
                    <fullName>EServices/Employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Please_check_the_acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check agreeing to the acknowledgment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <description>Policy Number captured on the ERM case</description>
        <formula>Case__r.Policy__c</formula>
        <label>Policy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Group_Number__c</fullName>
        <label>Previous Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Privacy_Attestation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Privacy Attestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Same_for_All_Dependents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products Same for All Dependents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifying_Event_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Qualifying Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualifying_Event_Reason__c</fullName>
        <label>Qualifying Event Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Group</fullName>
                </value>
                <value>
                    <fullName>OE</fullName>
                </value>
                <value>
                    <fullName>New Hire</fullName>
                </value>
                <value>
                    <fullName>PT to FT</fullName>
                </value>
                <value>
                    <fullName>Newborn\Adoption</fullName>
                </value>
                <value>
                    <fullName>Marriage</fullName>
                </value>
                <value>
                    <fullName>Court Order</fullName>
                </value>
                <value>
                    <fullName>Loss of Coverage</fullName>
                </value>
                <value>
                    <fullName>Return From Military Leave</fullName>
                </value>
                <value>
                    <fullName>Group Adding Product Off-Cycle</fullName>
                </value>
                <value>
                    <fullName>Rehire</fullName>
                </value>
                <value>
                    <fullName>Moving into Service Area</fullName>
                </value>
                <value>
                    <fullName>Student Status</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Medicare Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Enter_User_Email_Updated__c</fullName>
        <description>Updated Re-Enter Email for EService request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Retype Email here</inlineHelpText>
        <label>Re-Enter User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Re_Enter_User_Email__c</fullName>
        <description>User Email reentered for EServices request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Re-Enter User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ready_to_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that the stream request details are completed and ready to submit.</description>
        <label>Ready to Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceiptDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Retiree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Dates_Requested_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Click on the pencil icon to remove the date.</inlineHelpText>
        <label>Report Dates Requested</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Dates_Requested_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Click on the pencil icon to remove the date.</inlineHelpText>
        <label>Report Dates Requested</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Dates_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Click on the pencil icon to remove the date.</inlineHelpText>
        <label>Report Dates Requested</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Descriptions__c</fullName>
        <formula>HYPERLINK(&quot;https://uhgazure.sharepoint.com/sites/GSRM/VM/RepGen%20Documentation/Shared%20Documents/Report%20Generator%20Report%20Descriptions.xls&quot;, &quot;Report Descriptions&quot; , &quot;_self&quot;)</formula>
        <label>Report Descriptions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For a specific time span report, enter a report stop date.</inlineHelpText>
        <label>Report End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Needed_RG__c</fullName>
        <label>Report Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addresses</fullName>
                </value>
                <value>
                    <fullName>Annual W2 Reporting</fullName>
                </value>
                <value>
                    <fullName>CBIZ VBP Eligibility Report</fullName>
                </value>
                <value>
                    <fullName>DHP Elig Report</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Age</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Age Range</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Age Range (Variable)</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Age Range, Sex</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Mbrs Covered</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Mkt Site, Prod Type</fullName>
                </value>
                <value>
                    <fullName>E/D Count by PCP MPIN</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Prod Type</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Prod Type, Mbrs Cov</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Prod Type, PV/RC</fullName>
                </value>
                <value>
                    <fullName>E/D Count by PV/ RC</fullName>
                </value>
                <value>
                    <fullName>E/D Count by PV/RC, Mbrs Covered</fullName>
                </value>
                <value>
                    <fullName>E/D Count by PV/RC, State</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Sex, Age</fullName>
                </value>
                <value>
                    <fullName>E/D Count by State, ZIP</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Suffix, State</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Suffix, State, City</fullName>
                </value>
                <value>
                    <fullName>E/D Count by Under/Over 65</fullName>
                </value>
                <value>
                    <fullName>E/D Table by Mkt Site</fullName>
                </value>
                <value>
                    <fullName>E/D Table by PV/RC and Cov Type</fullName>
                </value>
                <value>
                    <fullName>Harvard Pilgrim Roster</fullName>
                </value>
                <value>
                    <fullName>Marketplace Census</fullName>
                </value>
                <value>
                    <fullName>Medicare Report</fullName>
                </value>
                <value>
                    <fullName>Member Master</fullName>
                </value>
                <value>
                    <fullName>Member SSN Collection Report</fullName>
                </value>
                <value>
                    <fullName>Name and Address Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Needed__c</fullName>
        <label>Report Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Census Report</fullName>
                </value>
                <value>
                    <fullName>Standard Census Report with PHI</fullName>
                </value>
                <value>
                    <fullName>Standard Census Report with PCP</fullName>
                </value>
                <value>
                    <fullName>Standard Census PCP/Network Report</fullName>
                </value>
                <value>
                    <fullName>Standard Medicare SSN Reclamation Report</fullName>
                </value>
                <value>
                    <fullName>Standard Provider Disruption Report</fullName>
                </value>
                <value>
                    <fullName>Standard Census Member Count Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Choose the effective date for the report. For current membership use today’s date.</inlineHelpText>
        <label>Report Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Level__c</fullName>
        <description>Reporting Level</description>
        <label>Reporting Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Expanded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Report_Descriptions__c</fullName>
        <description>Report Descriptions for Reporting Request Type</description>
        <formula>HYPERLINK(&quot;https://uhgazure.sharepoint.com/sites/GSRM/VM/RepGen%20Documentation/Shared%20Documents/ReportingDataElements%20REPORT%20Request%20Types.xlsx&quot;, &quot;Report Descriptions&quot; , &quot;_self&quot;)</formula>
        <label>Report Descriptions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reporting checkbox</description>
        <inlineHelpText>Add reporting by checking this box.</inlineHelpText>
        <label>Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Plat_form__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Auto Add</fullName>
                </value>
                <value>
                    <fullName>Auto Change</fullName>
                </value>
                <value>
                    <fullName>Auto Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Auto Term</fullName>
                </value>
                <value>
                    <fullName>CalPERS Electronic Fallout</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>COBRA Add</fullName>
                </value>
                <value>
                    <fullName>COBRA Change</fullName>
                </value>
                <value>
                    <fullName>COBRA Term</fullName>
                </value>
                <value>
                    <fullName>Correction to Previously Mailed/Faxed Document</fullName>
                </value>
                <value>
                    <fullName>CPTIN</fullName>
                </value>
                <value>
                    <fullName>Customer Profile Updates</fullName>
                </value>
                <value>
                    <fullName>Dual Platform</fullName>
                </value>
                <value>
                    <fullName>Duplicate Member</fullName>
                </value>
                <value>
                    <fullName>Electronic Fallout</fullName>
                </value>
                <value>
                    <fullName>Group Level Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Group Level Term</fullName>
                </value>
                <value>
                    <fullName>Group Level Updates</fullName>
                </value>
                <value>
                    <fullName>Host System Error Reports (Multiple Policy Numbers)</fullName>
                </value>
                <value>
                    <fullName>Member SSN Update</fullName>
                </value>
                <value>
                    <fullName>Reinstate</fullName>
                </value>
                <value>
                    <fullName>Report Generator</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>SHOP/Individual Exchange</fullName>
                </value>
                <value>
                    <fullName>Standard Alt-ID Change</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>TPA Reports (Multiple Policy Numbers)</fullName>
                </value>
                <value>
                    <fullName>W2 Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Backup__c</fullName>
        <formula>$User.Id = Owner:User.My_Backup__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Backup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Year__c</fullName>
        <label>Request Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_new_User_ID__c</fullName>
        <description>Updated User ID for EService request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter Old ID here</inlineHelpText>
        <label>Request new User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterDepartment__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Requester Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requester</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retro_Exclusion_Reason__c</fullName>
        <label>Retro Exclusion Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Changing from active to COBRA</fullName>
                </value>
                <value>
                    <fullName>Changing from COBRA to active</fullName>
                </value>
                <value>
                    <fullName>Clerical error 6.10</fullName>
                </value>
                <value>
                    <fullName>COBRA code changes</fullName>
                </value>
                <value>
                    <fullName>COBRA/State Continuation adds</fullName>
                </value>
                <value>
                    <fullName>Colorado HB 186</fullName>
                </value>
                <value>
                    <fullName>Court orders specifying to terminate a member</fullName>
                </value>
                <value>
                    <fullName>Court orders to add a member</fullName>
                </value>
                <value>
                    <fullName>Date Processed is not in line with contract language</fullName>
                </value>
                <value>
                    <fullName>Demographic change/update that is non-financial</fullName>
                </value>
                <value>
                    <fullName>Dependent terms when dependent is enrolled as EE under own SSN w/same employer &amp; same coverage period</fullName>
                </value>
                <value>
                    <fullName>ID/SSN correction/changes to correct overlapping coverage periods</fullName>
                </value>
                <value>
                    <fullName>Internal clerical errors made &amp; identified within 60 days of the original transaction date</fullName>
                </value>
                <value>
                    <fullName>Interpretation of eServices</fullName>
                </value>
                <value>
                    <fullName>Louisiana member terms</fullName>
                </value>
                <value>
                    <fullName>Max Age/Student terminations</fullName>
                </value>
                <value>
                    <fullName>Medicare edit adds,changes,removals &amp; term of UHC policy due to becoming Medicare eligible</fullName>
                </value>
                <value>
                    <fullName>Non-contributory life products</fullName>
                </value>
                <value>
                    <fullName>Plan changes within the same product</fullName>
                </value>
                <value>
                    <fullName>Received timely paper filing</fullName>
                </value>
                <value>
                    <fullName>State sponsored plans</fullName>
                </value>
                <value>
                    <fullName>Surviving spouse updates</fullName>
                </value>
                <value>
                    <fullName>Termination due to death</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SDHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STD_Buy_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>STD Buy Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>STD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standalone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standalone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State of the agency or broker for EServices</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stream_Request_Number__c</fullName>
        <description>Stream Request Number</description>
        <formula>Case__r.External_Reference_ID__c</formula>
        <label>Stream Request Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address2__c</fullName>
        <description>Additional Street Address for agency or broker for EServices</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street Address of the agency or group for EServices</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_CPTIN__c</fullName>
        <description>Subscriber CPTIN</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber CPTIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_First_Name__c</fullName>
        <description>Subscriber First Name for CPTIN</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Last_Name__c</fullName>
        <description>Subscriber First Name for CPTIN</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppl_CH_Benefit_Amount_Requested__c</fullName>
        <description>Benefit Amount Requested for Supplemental CH Life</description>
        <label>Benefit Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suppl_EE_Benefit_Amount_Requested__c</fullName>
        <description>Benefit Amount Requested for Supplemental EE Life</description>
        <label>Benefit Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suppl_SP_Benefit_Amount_Requested__c</fullName>
        <description>Benefit Amount Requested for Supplemental SP Life</description>
        <label>Benefit Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplemental_CH_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplemental CH Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplemental_EE_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplemental EE Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplemental_Life_AD_D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplemental Life AD&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplemental_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplemental Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplemental_SP_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplemental SP Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDB</fullName>
                </value>
                <value>
                    <fullName>CES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Level__c</fullName>
        <label>Termination Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EE/Full Family</fullName>
                </value>
                <value>
                    <fullName>Dependent(s) Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>